@@ -159,6 +159,11 @@ exports.onChannelRemove = function(channel) {
     }
 };
 
+exports.updateFavoties = function() {
+    exports.addUserFavorites();
+    exports.getLoginName();
+};
+
 exports.addUserFavorites = function() {
     data.users = [];
     if(prefs.usernameList!='') {
