@@ -15,3 +15,4 @@ changelog
     - Fixed refresh button not working
     - Links not underlined in panel
     - Fixed button tooltip
+    - No scrollbar in panel for long streamnames
